--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,17 @@
     "display": "fullscreen",
     "icons": [
         {
-            "src": "launcher-icon-1x.png",
+            "src": "./images/launcher-icon-1x.png",
             "type": "image/png",
             "sizes": "48x48"
         },
         {
-            "src": "launcher-icon-2x.png",
+            "src": "./images/launcher-icon-2x.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "launcher-icon-4x.png",
+            "src": "./images/launcher-icon-4x.png",
             "type": "image/png",
             "sizes": "192x192"
         }
